--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,11 +7,30 @@
     <link rel="stylesheet" type="text/css" href="bootstrap\dist\css\bootstrap.css">
     <link rel="stylesheet" type="text/css" href="font-awesome\css\font-awesome.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>getinline</title>
+
 </head>
+
 <body>
-<script src="jquery\dist\jquery.js"></script>
-<script src ="handlebars\dist\handlebars.js"></script>
-<script src='main.js'></script>
+    <div class="container">
+        <h1>waiting list</h1>
+        <hr>
+        <form>
+            name:<br>
+            <input type="text" class="firstname form-control"><br> question:
+            <br>
+            <input type="text" class="lastname form-control">
+        </form>
+        <button class="btn btn-primary submitbtn" type="button">Sign Up</button>
+
+
+
+
+
+
+        <script src="jquery\dist\jquery.js"></script>
+        <script src="handlebars\dist\handlebars.js"></script>
+        <script src='main.js'></script>
 </body>
+
 </html>
