layout template without navbar

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,116 @@
 
 <body>
     <div class="container">
+        <header>
+            <nav></nav>
+        </header>
+        <!-- row 1 which has pics and button -->
+        <div class="row">
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-2">
+                <!-- picture and p/a -->
+            </div>
+            <div class="col-md-1">
+                <!-- button -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-2">
+                <!-- picture and p/a -->
+            </div>
+            <div class="col-md-1">
+                <!-- button -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-2">
+                <!-- picture and p/a -->
+            </div>
+            <div class="col-md-1">
+                <!-- button -->
+            </div>
+        </div>
+        <!-- end of row 1 -->
+        <div class="row">
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-3">
+                <!-- laptop -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-2">
+                <!-- laptop -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-3">
+                <!-- laptop -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+        </div>
+        <hr>
+        <!-- posts div -->
+        <div id="_posts">
+            <!-- begining of dummy post -->
+            <div class="row">
+                <div class="col-md-1">
+                    <!--empty-->
+                </div>
+                <div class="col-md-3">
+                    <!--name-->
+                </div>
+                <div class="col-md-6">
+                    <!--post-->
+                </div>
+                <div class="col-md-1">
+                    <!--time-->
+                </div>
+                <div class="col-md-1">
+                    <!--empty-->
+                </div>
+            </div>
+            <!-- end of dummy post-->
+        </div>
+        <!-- end of posts div -->
+        <hr>
+        <div class="row">
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-3">
+                <!-- name dropdown -->
+            </div>
+            <div class="col-md-6">
+                <!-- question box -->
+            </div>
+            <div class="col-md-1">
+                <!-- get in line button -->
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
         <h1>waiting list</h1>
         <hr>
         <form>
