--- a/public/index.html
+++ b/public/index.html
@@ -135,11 +135,23 @@
 
 
 
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse navHeaderCollapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Get inline</a></li>
+                        <li><a href="#">Waiting List</a></li>
+                        <li><a href="#">Consulation</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
 
 
-        <script src="jquery\dist\jquery.js"></script>
-        <script src="handlebars\dist\handlebars.js"></script>
+
+        <script src=" jquery\dist\jquery.js "></script>
+        <script src="handlebars\dist\handlebars.js "></script>
         <script src='main.js'></script>
 </body>
 
