filled out two rows

--- a/public/index.html
+++ b/public/index.html
@@ -17,33 +17,42 @@
             <nav></nav>
         </header>
         <!-- row 1 which has pics and button -->
-        <div class="row">
+        <div class="row portraits">
             <div class="col-md-1">
                 <!-- empty -->
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
+                <img class='teacher-pic'src="assets/Brandon.png" alt="brandon pic" >
+                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
+                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
             </div>
             <div class="col-md-1">
-                <!-- button -->
-            </div>
-            <div class="col-md-1">
-                <!-- empty -->
-            </div>
-            <div class="col-md-2">
-                <!-- picture and p/a -->
-            </div>
-            <div class="col-md-1">
-                <!-- button -->
+                <button class="button">NEXT</button>
             </div>
             <div class="col-md-1">
                 <!-- empty -->
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
+                <img class='teacher-pic'src="assets/Hadas.png" alt="hadas pic" >
+                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
+                <!-- <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >-->
             </div>
             <div class="col-md-1">
-                <!-- button -->
+                <button class="button">NEXT</button>
+            </div>
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+            <div class="col-md-2">
+                <!-- picture and p/a -->
+                <img class='teacher-pic'src="assets/Omer.png" alt="omer pic" >
+                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
+                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
+            </div>
+            <div class="col-md-1">
+                <button class="button">NEXT</button>
             </div>
         </div>
         <!-- end of row 1 -->
@@ -51,20 +60,19 @@
             <div class="col-md-1">
                 <!-- empty -->
             </div>
-            <div class="col-md-3">
+            <div id= "laptopLeft" class="col-md-3 laptop">
                 <!-- laptop -->
+                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
             </div>
-            <div class="col-md-1">
-                <!-- empty -->
-            </div>
-            <div class="col-md-2">
+
+            <div id= "laptopCenter" class="col-md-4 laptop">
                 <!-- laptop -->
+                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
             </div>
-            <div class="col-md-1">
-                <!-- empty -->
-            </div>
-            <div class="col-md-3">
+
+            <div id= "laptopRight" class="col-md-3 laptop">
                 <!-- laptop -->
+                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
             </div>
             <div class="col-md-1">
                 <!-- empty -->
