--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="bootstrap\dist\css\bootstrap.css">
     <link rel="stylesheet" type="text/css" href="font-awesome\css\font-awesome.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="dummypost.css">
     <title>getinline</title>
+
 
 </head>
 
@@ -80,11 +82,16 @@
                 </div>
                 <div class="col-md-3">
                     <!--name-->
+                    <div class="rcorner1">avi</div>
                 </div>
                 <div class="col-md-6">
+                    <div class="rcorner2">express problem</div>
+
                     <!--post-->
                 </div>
                 <div class="col-md-1">
+                    <div class="rcorner3">10:45</div>
+
                     <!--time-->
                 </div>
                 <div class="col-md-1">
