--- a/public/index.html
+++ b/public/index.html
@@ -86,19 +86,20 @@
             <!-- begining of dummy post -->
             <div class="row">
                 <div class="col-md-1">
-                    <!--empty-->
+                    <!--checkbox-->
+                    <input class= "regular-checkbox"id="checkBox" type="checkbox">
                 </div>
                 <div class="col-md-3">
                     <!--name-->
-                    <div class="rcorner1">avi</div>
+                    <div class="corner rcorner1">avi</div>
                 </div>
                 <div class="col-md-6">
-                    <div class="rcorner2">express problem</div>
+                    <div class="corner rcorner2">express problem</div>
 
                     <!--post-->
                 </div>
                 <div class="col-md-1">
-                    <div class="rcorner3">10:45</div>
+                    <div class="corner rcorner3">10:45</div>
 
                     <!--time-->
                 </div>
