--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Brandon.png" alt="brandon pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
-                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Brandon.png" alt="brandon pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
+                <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
             </div>
             <div class="col-md-1">
                 <button class="button">NEXT</button>
@@ -37,8 +37,8 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Hadas.png" alt="hadas pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Hadas.png" alt="hadas pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
                 <!-- <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >-->
             </div>
             <div class="col-md-1">
@@ -49,9 +49,9 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Omer.png" alt="omer pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
-                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Omer.png" alt="omer pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
+                <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
             </div>
             <div class="col-md-1">
                 <button class="button">NEXT</button>
@@ -62,19 +62,19 @@
             <div class="col-md-1">
                 <!-- empty -->
             </div>
-            <div id= "laptopLeft" class="col-md-3 laptop">
+            <div id="laptopLeft" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
 
-            <div id= "laptopCenter" class="col-md-4 laptop">
+            <div id="laptopCenter" class="col-md-4 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
 
-            <div id= "laptopRight" class="col-md-3 laptop">
+            <div id="laptopRight" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
             <div class="col-md-1">
                 <!-- empty -->
@@ -82,7 +82,7 @@
         </div>
         <hr>
         <!-- posts div -->
-        <div id="_posts">
+        <div id="_posts">gi
             <!-- begining of dummy post -->
             <div class="row">
                 <div class="col-md-1">
