--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,18 @@
 
 <body>
     <div class="container">
-        <header>
-            <nav></nav>
-        </header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse navHeaderCollapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Get inline</a></li>
+                        <li><a href="#">Waiting List</a></li>
+                        <li><a href="#">Consulation</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <!-- row 1 which has pics and button -->
         <div class="row portraits">
             <div class="col-md-1">
@@ -82,23 +91,24 @@
         </div>
         <hr>
         <!-- posts div -->
-        <div id="_posts">gi
+        <div id="_posts">
             <!-- begining of dummy post -->
             <div class="row">
                 <div class="col-md-1">
-                    <!--empty-->
+                    <!--checkbox-->
+                    <input class="regular-checkbox" id="checkBox" type="checkbox">
                 </div>
                 <div class="col-md-3">
                     <!--name-->
-                    <div class="rcorner1">avi</div>
+                    <div class="corner rcorner1">{{name}}</div>
                 </div>
                 <div class="col-md-6">
-                    <div class="rcorner2">express problem</div>
+                    <div class="corner rcorner2"> {{problem}}</div>
 
                     <!--post-->
                 </div>
                 <div class="col-md-1">
-                    <div class="rcorner3">10:45</div>
+                    <div class="corner rcorner3">{{time}}</div>
 
                     <!--time-->
                 </div>
@@ -134,10 +144,6 @@
 
 
 
-
-
-
-
         <h1>waiting list</h1>
         <hr>
         <form>
@@ -150,20 +156,37 @@
 
 
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="collapse navbar-collapse navHeaderCollapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Get inline</a></li>
-                        <li><a href="#">Waiting List</a></li>
-                        <li><a href="#">Consulation</a></li>
-                    </ul>
+
+
+
+
+        <script id="post-template" type="text/x-handlebars-template">
+            <!-- begining of dummy post -->
+            <div class="row">
+                <div class="col-md-1">
+                    <!--checkbox-->
+                    <input class="regular-checkbox" id="checkBox" type="checkbox">
+                </div>
+                <div class="col-md-3">
+                    <!--name-->
+                    <div class="corner rcorner1">{{name}}</div>
+                </div>
+                <div class="col-md-6">
+                    <div class="corner rcorner2">{{problem}}</div>
+
+                    <!--post-->
+                </div>
+                <div class="col-md-1">
+                    <div class="corner rcorner3">{{time}}</div>
+
+                    <!--time-->
+                </div>
+                <div class="col-md-1">
+                    <!--empty-->
                 </div>
             </div>
-        </div>
-
-
-
+            <!-- end of dummy post-->
+        </script>
 
         <script src=" jquery\dist\jquery.js "></script>
         <script src="handlebars\dist\handlebars.js "></script>
