--- a/public/index.html
+++ b/public/index.html
@@ -100,15 +100,15 @@
                 </div>
                 <div class="col-md-3">
                     <!--name-->
-                    <div class="corner rcorner1">{{name}}</div>
+                    <div class="corner rcorner1">avi</div>
                 </div>
                 <div class="col-md-6">
-                    <div class="corner rcorner2"> {{problem}}</div>
+                    <div class="corner rcorner2">express problem</div>
 
                     <!--post-->
                 </div>
                 <div class="col-md-1">
-                    <div class="corner rcorner3">{{time}}</div>
+                    <div class="corner rcorner3">10:45</div>
 
                     <!--time-->
                 </div>
