--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,18 @@
 
 <body>
     <div class="container">
-            <div class="navbar navbar-inverse navbar-fixed-top">
-                    <div class="container">
-                        <div class="collapse navbar-collapse navHeaderCollapse">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Get inline</a></li>
-                                <li><a href="#">Waiting List</a></li>
-                                <li><a href="#">Consulation</a></li>
-                            </ul>
-                        </div>
-                    </div>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse navHeaderCollapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Get inline</a></li>
+                        <li><a href="#">Waiting List</a></li>
+                        <li><a href="#">Consulation</a></li>
+                    </ul>
                 </div>
-                
+            </div>
+        </div>
+
         <!-- row 1 which has pics and button -->
         <div class="row portraits">
             <div class="col-md-1">
@@ -34,9 +34,9 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Brandon.png" alt="brandon pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
-                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Brandon.png" alt="brandon pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
+                <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
             </div>
             <div class="col-md-1">
                 <button class="button">NEXT</button>
@@ -46,8 +46,8 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Hadas.png" alt="hadas pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Hadas.png" alt="hadas pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
                 <!-- <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >-->
             </div>
             <div class="col-md-1">
@@ -58,9 +58,9 @@
             </div>
             <div class="col-md-2">
                 <!-- picture and p/a -->
-                <img class='teacher-pic'src="assets/Omer.png" alt="omer pic" >
-                <img class='avail'src="assets/pause-button-dark-red-md.png" alt="brandon pic" >
-                <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >
+                <img class='teacher-pic' src="assets/Omer.png" alt="omer pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
+                <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
             </div>
             <div class="col-md-1">
                 <button class="button">NEXT</button>
@@ -71,19 +71,19 @@
             <div class="col-md-1">
                 <!-- empty -->
             </div>
-            <div id= "laptopLeft" class="col-md-3 laptop">
+            <div id="laptopLeft" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
 
-            <div id= "laptopCenter" class="col-md-4 laptop">
+            <div id="laptopCenter" class="col-md-4 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
 
-            <div id= "laptopRight" class="col-md-3 laptop">
+            <div id="laptopRight" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img class='notebook'src="assets/Notebook.png" alt="notebook pic" >
+                <img class='notebook' src="assets/Notebook.png" alt="notebook pic">
             </div>
             <div class="col-md-1">
                 <!-- empty -->
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-md-1">
                     <!--checkbox-->
-                    <input class= "regular-checkbox"id="checkBox" type="checkbox">
+                    <input class="regular-checkbox" id="checkBox" type="checkbox">
                 </div>
                 <div class="col-md-3">
                     <!--name-->
@@ -121,43 +121,41 @@
         <!-- end of posts div -->
         <hr>
         <div class="row">
+            <h1>Save your spot</h1>
             <div class="col-md-1">
                 <!-- empty -->
             </div>
             <div class="col-md-3">
                 <!-- name dropdown -->
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">SELECT YOUR NAME<span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Olin</a></li>
+                        <li><a href="#">Sarai</a></li>
+                        <li><a href="#">Andrea</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-6">
                 <!-- question box -->
+                <div class="form-group">
+                    <label for="comment">Question:</label>
+                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
             </div>
             <div class="col-md-1">
                 <!-- get in line button -->
+                <button id="gil-btn" class="btn btn-primary" type="button">GET IN LINE</button>
             </div>
             <div class="col-md-1">
                 <!-- empty -->
             </div>
         </div>
 
-
-
-
-
-
-
-        <h1>waiting list</h1>
-        <hr>
-        <form>
-            name:<br>
-            <input type="text" class="firstname form-control"><br> question:
-            <br>
-            <input type="text" class="lastname form-control">
-        </form>
-        <button class="btn btn-primary submitbtn" type="button">Sign Up</button>
-
-
-        <script src=" jquery\dist\jquery.js "></script>
+        <script src="jquery\dist\jquery.js "></script>
+        <script src="bootstrap/dist/js/bootstrap.js"></script>
         <script src="handlebars\dist\handlebars.js "></script>
-        <script src='main.js'></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
