--- a/public/index.html
+++ b/public/index.html
@@ -70,20 +70,20 @@
             <div class="col-md-1">
                 <!-- empty -->
             </div>
-            <div id = "laptopLeft" class="col-md-3 laptop">
+            <div id="laptopLeft" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img id="LaptopLeftImage"class='notebook'src="assets/Notebook.png" alt="notebook pic" >
-                <h2 id="textBrandon"class= "textBrandon textMonitor">AMITAY</h2>
+                <img id="LaptopLeftImage" class='notebook' src="assets/Notebook.png" alt="notebook pic">
+                <h2 id="textBrandon" class="textBrandon textMonitor">AMITAY</h2>
             </div>
             <div id="laptopCenter" class="col-md-4 laptop">
                 <!-- laptop -->
-                <img id="LaptopCenterImage"class='notebook'src="assets/Notebook.png" alt="notebook pic" >
-                <h2 class= "textHadas textMonitor">LANA</h2>
+                <img id="LaptopCenterImage" class='notebook' src="assets/Notebook.png" alt="notebook pic">
+                <h2 class="textHadas textMonitor">LANA</h2>
             </div>
             <div id="laptopRight" class="col-md-3 laptop">
                 <!-- laptop -->
-                <img id="LaptopRightImage"class='notebook'src="assets/Notebook.png" alt="notebook pic" >
-                <h2 class= "textOmer textMonitor">SHY</h2>
+                <img id="LaptopRightImage" class='notebook' src="assets/Notebook.png" alt="notebook pic">
+                <h2 class="textOmer textMonitor">SHY</h2>
             </div>
             <div class="col-md-1">
                 <!-- empty -->
@@ -132,11 +132,11 @@
             <div class="col-md-3">
                 <!-- name dropdown -->
                 <div class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">SELECT YOUR NAME<span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Olin</a></li>
-                        <li><a href="#">Sarai</a></li>
-                        <li><a href="#">Andrea</a></li>
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">SELECT YOUR NAME <i class="fa fa-caret-down" aria-hidden="true"></i></button>
+                    <ul class="dropdown-menu ">
+                        <li class='student'>Olin</li>
+                        <li class='student'>Sarai</li>
+                        <li class='student'>Andrea</li>
                     </ul>
                 </div>
             </div>
@@ -168,12 +168,12 @@
                     <div class="corner rcorner1">{{name}}</div>
                 </div>
                 <div class="col-md-6">
-                    <div class="corner rcorner2">{{problem}}</div>
+                    <div class="corner rcorner2">{{text}}</div>
 
                     <!--post-->
                 </div>
                 <div class="col-md-1">
-                    <div class="corner rcorner3">{{time}}</div>
+                    <div class="corner rcorner3">11</div>
 
                     <!--time-->
                 </div>
@@ -181,12 +181,15 @@
                     <!--empty-->
                 </div>
             </div>
-            <!-- end of dummy post-->
         </script>
+        <!-- end of dummy post-->
         <script src="jquery\dist\jquery.js "></script>
+
         <script src="bootstrap/dist/js/bootstrap.js"></script>
         <script src="handlebars\dist\handlebars.js "></script>
         <script src="main.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="socketscr.js"></script>
 </body>
 
 </html>
