--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
                         <li><a href="#getinline" class="smoothScroll">Get inline </a></li>
                         <li><a href="#line" class="smoothScroll">Waiting List</a></li>
                         <li><a href="#teachers" class="smoothScroll">Consulation</a></li>
-
+                        <img style="/* -webkit-user-select: none; *//* background-position: 0px 0px, 10px 10px; *//* background-size: 20px 20px; *//* background-image:linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%),linear-gradient(45deg, #eee 25%, white 25%, white 75%, #eee 75%, #eee 100%); */cursor: zoom-in;"
+                            src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/1076/s300/logo-300px-green-01.png" width="50" height="50">
                     </ul>
                 </div>
             </div>
