took out dummy post

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
                         <li><a href="#line" class="smoothScroll">Waiting List</a></li>
                         <li><a href="#teachers" class="smoothScroll">Consulation</a></li>
                         <img style="/* -webkit-user-select: none; *//* background-position: 0px 0px, 10px 10px; *//* background-size: 20px 20px; *//* background-image:linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%),linear-gradient(45deg, #eee 25%, white 25%, white 75%, #eee 75%, #eee 100%); */cursor: zoom-in;"
-                            src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/1076/s300/logo-300px-green-01.png" width="50" height="50">
+                            src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/1076/s300/logo-300px-green-01.png"
+                            width="50" height="50">
                     </ul>
                 </div>
             </div>
@@ -97,33 +98,9 @@
         </div>
 
         <hr>
+        <!-- posts div -->
         <div id="_posts">
-            <!-- posts div -->
             <!-- begining of dummy post -->
-            <div class="row">
-
-                <div class="col-md-1">
-                    <!--checkbox-->
-                    <input class="regular-checkbox" id="checkBox" type="checkbox">
-                </div>
-                <div class="col-md-3">
-                    <!--name-->
-                    <div class="corner rcorner1">avi</div>
-                </div>
-                <div class="col-md-6">
-                    <div class="corner rcorner2">express problem</div>
-
-                    <!--post-->
-                </div>
-                <div class="col-md-1">
-                    <div class="corner rcorner3">10:45</div>
-
-                    <!--time-->
-                </div>
-                <div class="col-md-1">
-                    <!--empty-->
-                </div>
-            </div>
             <!-- end of dummy post-->
         </div>
         <!-- end of posts div -->
